# costgen

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
examples/: README.md  _offline_providers.py
examples/estimate_router/: README.md  router.py  run.py
examples/fastapi_service/: README.md  app.py  run.py
examples/langgraph_agent/: README.md  agent.py  run.py
examples/support_triage/: README.md  _offline.py  existing_app.py  run.py
specs/001-llm-cost-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-cost-tracking/checklists/: requirements.md
specs/001-llm-cost-tracking/contracts/: export-schema.json  public-api.md
src/costgen/: __init__.py  cli.py
src/costgen/_adapters/: _pipeline.py  anthropic.py  instrument.py  normalize.py  openai.py  scoped.py  wrapper.py
src/costgen/_engine/: _safe.py  calculator.py  models.py  tracker.py
src/costgen/_estimate/: anthropic.py  openai.py
src/costgen/_pricing/: _alias.py  base.py  loader.py
src/costgen/_report/: console.py  (+1 more)
tests/: conftest.py
tests/contract/: test_estimate_api.py  test_export_schema.py  test_public_api_capture.py
tests/integration/: test_example_estimate_router.py  test_example_fastapi.py  test_example_langgraph.py  test_example_support_triage.py  test_install_langchain_openai.py  test_langchain_callback.py  test_sdk_compat.py  test_us1_autoinstrument.py  test_us1_framework.py  test_us1_robustness.py  test_us2_export_diff.py  test_us2_report.py  test_us3_estimate.py  test_us4_explicit.py  test_us4_scoped.py
tests/unit/: test_alias.py  test_calculator.py  test_import_smoke.py  test_normalize.py  test_overhead_budget.py  test_pricing.py  test_tracker.py
(+3 files in other folders)
