[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costgen"
version = "0.1.0"
description = "Add cost visibility to any LLM app — new or existing, raw-SDK or framework-based — in one line."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "costgen contributors" }]
keywords = ["llm", "cost", "tokens", "openai", "anthropic", "observability", "finops"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
# Zero required runtime dependencies (Constitution VI).
dependencies = []

[project.optional-dependencies]
# Supported provider-SDK version ranges are an explicit contract (FR-025);
# the compatibility matrix test (T045) tests against these declared ranges.
openai = ["openai>=1.40,<2", "tiktoken>=0.7"]
anthropic = ["anthropic>=0.40,<1"]
all = ["openai>=1.40,<2", "tiktoken>=0.7", "anthropic>=0.40,<1"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]

[project.scripts]
costgen = "costgen.cli:main"

[project.urls]
Homepage = "https://github.com/yashdixit/costgen"

[tool.hatch.build.targets.wheel]
# Bundled pricing JSON lives inside the package dir and is included automatically.
packages = ["src/costgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["costgen"]

# Constitution IV: cost-math modules MUST hold 100% coverage. CI runs this
# focused gate against the calculator in addition to the full suite.
[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# str+Enum is a deliberate pattern (stable JSON serialization of enum values).
ignore = ["UP042"]
